--- a/portfolio.html
+++ b/portfolio.html
@@ -26,24 +26,38 @@
 	  		<hr align="center" width="600px">
 	  			<div class="box1">
 	  				<h3 id="nature">Nature</h3>
-	  				<img id="nature" src="assets/images/Hopetoun_falls.jpg" alt="nature" width="250px" height="175px">
+	  				<img src="assets/images/Hopetoun_falls.jpg" alt="nature" width="250px" height="175px">
 	  			</div>
 	  			<div class="box2">
 	  				<h3 id="planet">Planet</h3>
-	  				<img id="planet" src="assets/images/planets.jpg" alt="planets" width="250px" height="175px">
+	  				<img src="assets/images/planets.jpg" alt="planets" width="250px" height="175px">
 	  			</div>
 	  			<div class="box3">
 	  				<h3 id="sport">Sports</h3>
-	  				<img id="sport" src="assets/images/michael-phelps.jpg" alt="sports" width="250px" height="175px">
+	  				<img src="assets/images/michael-phelps.jpg" alt="sports" width="250px" height="175px">
 	  			</div>
 	  			<div class="box4">
 	  				<h3 id="music">Music</h3>
-	  				<img id="music" src="assets/images/music.jpg" alt="music" width="250px" height="175px">
+	  				<img src="assets/images/music.jpg" alt="music" width="250px" height="175px">
 	  			</div>
 	  			<div class="box5">
 	  				<h3 id="tesla">Technology</h3>
-	  				<img id="tesla" src="assets/images/tesla-model-x-5.jpg" alt="tesla" width="250px" height="175px">
+	  				<img src="assets/images/tesla-model-x-5.jpg" alt="tesla" width="250px" height="175px">
 	  			</div>
+	</div>
+
+	<div class="connect">
+			<h2>Connect with Me</h2>
+			<hr align="center" width="350px">
+			<a href="https://github.com/tonyjkuang" target="_blank">
+				<img id="github" src="assets/images/Github.png" alt="Github">
+			</a>
+			<a href="https://www.linkedin.com/in/tonyjkuang/" target="_blank">
+				<img id="linkedin" src="assets/images/LinkedIn.png" alt="LinkedIn">
+			</a>
+			<a href="https://www.facebook.com/jianze.kuang" target="_blank">
+				<img id="facebook" src="assets/images/Facebook.ico" alt="Facebook">
+			</a>
 	</div>
 
 </body>
