--- a/index.html
+++ b/index.html
@@ -1,53 +1,56 @@
-<!DOCTYPE html>
-<html>
+<!doctype html>
+<html lang="en-us">
+
 <head>
-	<title>About Me</title>
-	<link rel="stylesheet" type="text/css" href="assets/css/style.css">
+  <meta charset="UTF-8">
+  <title>About | Tony Kuang</title>
+  <link rel="stylesheet" type="text/css" href="assets/css/reset.css">
+  <link rel="stylesheet" type="text/css" href="assets/css/style.css">
 </head>
 
 <body>
-		<section>
-			<h1>Tony Kuang</h1>
-			<div class="nav">
-				<a href="index.html">
-				<h3 id="about">About</h3>
-				</a>
-				<a href="portfolio.html">
-				<h3 id="portfolio">Portfolio</h3>
-				</a>
-				<a href="contact.html">
-				<h3 id="contact">Contact</h3>
-				</a>
-			</div>
-		</section>
 
-		<div class="container">
-			<h2>About Me</h2>
-			<hr align="center" width="600px">
-			<img id="profile" src="assets/images/Profile Pic.jpg" alt="profile pic">
-			<p>My name is Tony Kuang. I am from China. People ask me if I have a Chinese name. Of course I do! My Chinese name is Jianze Kuang. People always have hard time prouncing my Chinese name. So I usually go by Tony. Tony has been with me since I was born. My mom gave that name to me. She said she just liked the name!</p>
+  <header id="masthead">
+    <div class="container">
+      <a href="index.html" id="logo">Tony Kuang</a>
+      <nav>
+        <a href="index.html">About</a>
+        <a href="portfolio.html">Portfolio</a>
+        <a href="contact.html">Contact</a>
+      </nav>
+    </div>
+  </header>
 
-			<p>I have been in the U.S. for more than 5 years. I went to KU, finished my undergraduate degree in Finance, and got a financial analyst job in Topeka. I really want to get into coding because I want to work in IT and eventually build my own startup. Even if in finance, programming is becomming more and more important because of the integration of financial data and database.</p>
+  <div id="main-container" class="container">
+    <section class="main-section">
+      <h1>About Me</h1>
 
-			<p>I am a musician and an athlete. I am also a traveler and an adventuers:)</p>
+      <img src="assets/images/Profile Pic.jpg" class="auth-image" alt="Tony Kuang">
 
-		</div>
+      <p>My name is Tony Kuang. I am from China. People ask me if I have a Chinese name. Of course I do! My Chinese name is Jianze Kuang. People always have hard time prouncing my Chinese name. So I usually go by Tony. Tony has been with me since I was born. My mom gave that name to me. She said she just liked the name!</p>
 
-		<div class="connect">
-			<h2>Connect with Me</h2>
-			<hr align="center" width="350px">
-			<a href="https://github.com/tonyjkuang" target="_blank">
-				<img id="github" src="assets/images/Github.png" alt="Github">
-			</a>
-			<a href="https://www.linkedin.com/in/tonyjkuang/" target="_blank">
-				<img id="linkedin" src="assets/images/LinkedIn.png" alt="LinkedIn">
-			</a>
-			<a href="https://www.facebook.com/jianze.kuang" target="_blank">
-				<img id="facebook" src="assets/images/Facebook.ico" alt="Facebook">
-			</a>
-		</div>
+      <p>I have been in the U.S. for more than 5 years. I went to KU, finished my undergraduate degree in Finance, and got a financial analyst job in Topeka. I really want to get into coding because I want to work in IT and eventually build my own startup. Even if in finance, programming is becomming more and more important because of the integration of financial data and database.</p>
 
-		<footer>@Copyright 2017 Tony Kuang</footer>
+      <p>I am a musician and an athlete. I am also a traveler and an adventuers:)</p>
 
+    </section>
+
+    <section class="sidebar">
+      <div id="connect">
+        <h2>Connect with Me</h2>
+
+        <a href="https://github.com/tonyjkuang"><img src="assets/images/Github.png" class="social" alt="GitHub" /></a>
+        <a href="https://www.linkedin.com/in/tonyjkuang/"><img src="assets/images/LinkedIn.png" class="social" alt="LinkedIn" /></a>
+        <a href="https://www.facebook.com/jianze.kuang"><img src="assets/images/Facebook.ico" class="social" alt="Facebook" /></a>
+      </div>
+    </section>
+  </div>
+
+  <footer>
+    <div class="container">
+      Copyright &copy; 2017 Tony Kuang
+    </div>
+  </footer>
 </body>
+
 </html>
