--- a/portfolio.html
+++ b/portfolio.html
@@ -1,64 +1,74 @@
-<!DOCTYPE html>
-<html>
+<!doctype html>
+<html lang="en-us">
+
 <head>
-	<title>Portfolio</title>
-	<link rel="stylesheet" type="text/css" href="assets/css/style.css">
+  <meta charset="UTF-8">
+  <title>Portfolio | Tony Kuang</title>
+  <link rel="stylesheet" type="text/css" href="assets/css/reset.css">
+  <link rel="stylesheet" type="text/css" href="assets/css/style.css">
 </head>
 
 <body>
-	<section>
-			<h1>Tony Kuang</h1>
-			<div class="nav">
-				<a href="index.html">
-				<h3 id="about">About</h3>
-				</a>
-				<a href="portfolio.html">
-				<h3 id="portfolio">Portfolio</h3>
-				</a>
-				<a href="contact.html">
-				<h3 id="contact">Contact</h3>
-				</a>
-			</div>
-	</section>
 
-	<div class="container">	
-	  		<h2>Portfolio</h2>
-	  		<hr align="center" width="600px">
-	  			<div class="box1">
-	  				<h3 id="nature">Nature</h3>
-	  				<img src="assets/images/Hopetoun_falls.jpg" alt="nature" width="250px" height="175px">
-	  			</div>
-	  			<div class="box2">
-	  				<h3 id="planet">Planet</h3>
-	  				<img src="assets/images/planets.jpg" alt="planets" width="250px" height="175px">
-	  			</div>
-	  			<div class="box3">
-	  				<h3 id="sport">Sports</h3>
-	  				<img src="assets/images/michael-phelps.jpg" alt="sports" width="250px" height="175px">
-	  			</div>
-	  			<div class="box4">
-	  				<h3 id="music">Music</h3>
-	  				<img src="assets/images/music.jpg" alt="music" width="250px" height="175px">
-	  			</div>
-	  			<div class="box5">
-	  				<h3 id="tesla">Technology</h3>
-	  				<img src="assets/images/tesla-model-x-5.jpg" alt="tesla" width="250px" height="175px">
-	  			</div>
-	</div>
+  <header id="masthead">
+    <div class="container">
+      <a href="index.html" id="logo">Tony Kuang</a>
+      <nav>
+        <a href="index.html">About</a>
+        <a href="portfolio.html">Portfolio</a>
+        <a href="contact.html">Contact</a>
+      </nav>
+    </div>
+  </header>
 
-	<div class="connect">
-			<h2>Connect with Me</h2>
-			<hr align="center" width="350px">
-			<a href="https://github.com/tonyjkuang" target="_blank">
-				<img id="github" src="assets/images/Github.png" alt="Github">
-			</a>
-			<a href="https://www.linkedin.com/in/tonyjkuang/" target="_blank">
-				<img id="linkedin" src="assets/images/LinkedIn.png" alt="LinkedIn">
-			</a>
-			<a href="https://www.facebook.com/jianze.kuang" target="_blank">
-				<img id="facebook" src="assets/images/Facebook.ico" alt="Facebook">
-			</a>
-	</div>
+  <div id="main-container" class="container">
+    <section class="main-section">
+      <h1>Portfolio</h1>
 
+      <div class="work">
+        <img src="assets/images/Hopetoun_falls.jpg" alt="nature">
+
+        <h3>Nature</h3>
+      </div>
+      <div class="work">
+        <img src="assets/images/planets.jpg" alt="planets">
+
+        <h3>Planets</h3>
+      </div>
+      <div class="work">
+        <img src="assets/images/michael-phelps.jpg" alt="sports">
+
+        <h3>Sports</h3>
+      </div>
+      <div class="work">
+        <img src="assets/images/music.jpg" alt="music">
+
+        <h3>Music</h3>
+      </div>
+      <div class="work">
+        <img src="assets/images/tesla-model-x-5.jpg" alt="technology">
+
+        <h3>Technology</h3>
+      </div>
+
+    </section>
+
+    <section class="sidebar">
+      <div id="connect">
+        <h2>Connect with Me</h2>
+
+        <a href="https://github.com/tonyjkuang"><img src="assets/images/Github.png" class="social" alt="GitHub" /></a>
+        <a href="https://www.linkedin.com/in/tonyjkuang/"><img src="assets/images/LinkedIn.png" class="social" alt="LinkedIn" /></a>
+        <a href="https://www.facebook.com/jianze.kuang"><img src="assets/images/Facebook.ico" class="social" alt="Facebook" /></a>
+      </div>
+    </section>
+  </div>
+
+  <footer>
+    <div class="container">
+      Copyright &copy; 2017 Tony Kuang
+    </div>
+  </footer>
 </body>
+
 </html>
